--- a/bambu-app/src/components/component-styles.css
+++ b/bambu-app/src/components/component-styles.css
@@ -102,7 +102,6 @@
   width: 0;
   height: 2px;
   border-radius: 50px;
-  background-color: #6FDCE3;
   transition: width 0.3s ease, left 0.3s ease;
 }
 
@@ -111,19 +110,17 @@
   left: 0;
 }
 .link-container:hover .text {
-  color: #6FDCE3;
   transition: all 0.3s ease-in-out;
   left: 0;
+  
 }
 
-.active .underline {
+.underline-active {
   width: 100%;
   left: 0;
 }
 
-.active .text {
-  color: #6FDCE3;
-}
+
 
 @media (min-width: 860px) {
   .navlinks-display-burguer {
