--- a/bambu-app/src/app/input.css
+++ b/bambu-app/src/app/input.css
@@ -26,6 +26,24 @@
   --secondary-color: #3971C1; /* Color secundario */
 }
 
+.loader {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: animloader 1s linear infinite;
+}
+
+@keyframes animloader {
+  0% {
+    box-shadow: -72px 0 #FFF inset;
+  }
+  100% {
+    box-shadow: 48px 0 #FFF inset;
+  }
+}
+
 
 
 .opificio-bold {
